# ve-launchpad-poc

./: .gitignore  .gitmodules  .prettierrc  .solhint.json  LICENSE  README.md  balancer.sh  foundry.toml  package.json  pnpm-lock.yaml  pyproject.toml
broadcast/VeLaunchpad.s.sol/11155111/: run-latest.json
scripts/: SimpleStore.s.sol  VeLaunchpad.s.sol  veLaunchpadPOC.s.sol
src/: FeeDistributor.sol  IAuthorizer.sol  IAuthorizerAdaptor.sol  IBleuVotingEscrow.sol  IFeeDistributor.sol  IRewardDistributor.sol  ISimpleStore.sol  IVeLaunchpad.sol  IVeSystemFactory.sol  IVotingEscrow.sol  MyToken.sol  RewardDistributor.sol  VeBPTFactory.sol  VeSystemFactory.sol  WeightedPoolFactory.sol
src/test/: FeeDistributor.t.sol  MyToken.t.sol  SimpleStore.t.sol  VeLaunchpad.sepolia.t.sol  VeLaunchpad.t.sol  VeSystemLauncher.mainnet.t.sol  VeSystemLauncher.sepolia.t.sol  VeSystemLauncher.t.sol  veLaunchpad.t.sol  veLaunchpadE2E.t.sol
src/test/helpers/: E2EHelpers.sol  MyToken.sol
utils/: DeploymentHelper.sol  EOASignaturesValidator.sol  InputHelpers.sol  Math.sol  OptionalOnlyCaller.sol  SignaturesValidator.sol  VyperDeployer.sol
ve_launchpad/: compile_bytecode.py
vyper_contracts/: SimpleStore.vy  VeSystem.vy  VeSystemFactory.vy  VeSystemLauncher.vy  VeSystemLauncherFactory.vy  VotingEscrow.vy  VotingEscrowBlueprint.vy
